[package]
name = "hypercore"
version = "0.11.1-beta.10"
license = "MIT OR Apache-2.0"
description = "Secure, distributed, append-only log"
documentation = "https://docs.rs/hypercore"
repository = "https://github.com/datrs/hypercore"
readme = "README.md"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
keywords = ["dat", "p2p", "stream", "feed", "merkle"]
categories = [
  "asynchronous",
  "concurrency",
  "cryptography",
  "data-structures",
  "encoding",
]
edition = "2018"

[dependencies]
# TODO: After this issue:
# https://github.com/RustCrypto/hashes/issues/360
# that blocks public key => discovery key creation is fixed, switching to the blake2 crate
# would probably be wise.
blake2-rfc = "0.2.18"
byteorder = "1.3.4"
ed25519-dalek = "1.0.1"
anyhow = "1.0.26"
compact-encoding = { git = "https://github.com/datrs/compact-encoding", branch = "main" }
flat-tree = { git = "https://github.com/ttiurani/flat-tree", branch = "v10" }
lazy_static = "1.4.0"
memory-pager = "0.9.0"
merkle-tree-stream =  "0.12.0"
pretty-hash = "0.4.1"
rand = "0.7.3"
random-access-memory = { git = "https://github.com/ttiurani/random-access-memory", branch = "thiserror" }
random-access-storage = { git = "https://github.com/ttiurani/random-access-storage" , branch = "thiserror"}
sha2 = "0.9.2"
sleep-parser = "0.8.0"
sparse-bitfield = "0.11.0"
tree-index = "0.6.0"
bitfield-rle = "0.2.0"
futures = "0.3.4"
async-std = "1.5.0"
crc32fast = "1.3.2"
intmap = "2.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
random-access-disk = { git = "https://github.com/ttiurani/random-access-disk", branch = "thiserror" }

[dev-dependencies]
quickcheck = "0.9.2"
data-encoding = "2.2.0"
remove_dir_all = "0.7.0"
tempfile = "3.1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.25.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
sha2 = "0.10.2"
criterion = { version = "0.4", features = ["async_std"] }

[features]
default = ["async-std"]
tokio = ["random-access-disk/tokio"]
async-std = ["random-access-disk/async-std"]
# Used only in interoperability tests under tests/js-interop which use the javascript version of hypercore
# to verify that this crate works. To run them, use:
# cargo test --features js-interop-tests
js_interop_tests = []

[[bench]]
name = "memory"
harness = false
